# vdeniske

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx-static.conf
.github/workflows/: ci.yml
db/migrations/: 20241222193743_create_user_table.sql  20241223122344_create_post_table.sql  20241223140518_create_attachment_table.sql  20241223141443_add_avatar_column_user.sql  20241228082657_create_like_table.sql  20241228083753_create_dislike_table.sql  20241228084859_add_timestamp_post.sql  20241229160950_add_reply_post.sql
frontend/: Dockerfile  bun.lockb  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: index.css  index.tsx
frontend/src/app/: index.tsx  routes.tsx
frontend/src/entities/post/: index.ts
frontend/src/entities/post/ui/: Post.tsx
frontend/src/entities/user/: index.ts
frontend/src/features/user/: index.ts
frontend/src/lib/api/: index.ts
frontend/src/pages/: MainPage.tsx  PostPage.tsx  UserPage.tsx
frontend/src/shared/lib/: index.ts
frontend/src/shared/ui/: ImageViewer.tsx  InfiniteScroll.tsx  Input.tsx  Modal.tsx  Turnstile.tsx  index.ts
frontend/src/widgets/: AuthModal.tsx  AuthWrapper.tsx  CreatePost.tsx  MainLayout.tsx
frontend/src/widgets/auth/: AuthModal.tsx  LoginPart.tsx  RegisterPart.tsx
src/: main.rs
src/auth/: dto.rs  middleware.rs  mod.rs  router.rs  service.rs
src/post/: attachment_service.rs  dto.rs  entity.rs  like_service.rs  mod.rs  router.rs  service.rs
src/user/: dto.rs  entity.rs  mod.rs  router.rs  service.rs
src/utils/: cf_token.rs  mod.rs  turnstile.rs
(+9 files in other folders)
